--- a/app/src/main/res/layout/item_restaurant_cardview.xml
+++ b/app/src/main/res/layout/item_restaurant_cardview.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/restaurant_type_address_txt"
-                android:text="Open until 7 pm"
+                android:text="Open until ... pm"
                 android:layout_margin="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:textStyle="italic"/>
@@ -52,14 +52,15 @@
                 app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
                 android:text="120m"
                 android:layout_margin="5dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"/>
 
             <ImageButton
                 android:id="@+id/workmates_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@+id/restaurant_distance_txt"
                 app:layout_constraintBottom_toBottomOf="@id/restaurant_type_address_txt"
+                app:layout_constraintEnd_toStartOf="@id/workmates_count_txt"
                 android:src="@drawable/ic_baseline_person_outline_24"
                 android:background="#fff"/>
 
@@ -67,8 +68,8 @@
                 android:id="@+id/workmates_count_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/workmates_btn"
                 app:layout_constraintBottom_toBottomOf="@id/workmates_btn"
+                app:layout_constraintEnd_toStartOf="@id/restaurant_photo"
                 android:text="(0)"
                 android:inputType="number"/>
 
