--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -5,19 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.RestaurantDetailsActivity"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:context=".ui.RestaurantDetailsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
+        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/restaurant_details_toolbar">
@@ -29,18 +31,15 @@
                 android:src="@drawable/logo_resto"
                 android:cropToPadding="false"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="pin"/>
+                app:layout_collapseMode="pin"
+                android:contentDescription="@string/current_restaurant_image" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/restaurant_details_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:contentInsetLeft="0dp"
-                app:contentInsetStart="0dp"
-                app:contentInsetStartWithNavigation="0dp">
+                app:popupTheme="@style/AppTheme.PopupOverlay">
 
                 </androidx.appcompat.widget.Toolbar>
 
@@ -54,8 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/restaurant_details_toolbar"
+        app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        android:foreground="@drawable/ic_baseline_check_circle_24"/>
+        android:foreground="@drawable/ic_baseline_check_circle_24"
+        android:contentDescription="@string/confirmation_button" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
