--- a/app/src/main/res/layout/content_detail_restaurant.xml
+++ b/app/src/main/res/layout/content_detail_restaurant.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.RestaurantDetailsActivity"
-    tools:showIn="@layout/activity_detail_restaurant"
-    android:descendantFocusability="blocksDescendants">
+    tools:showIn="@layout/activity_detail_restaurant">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
