--- a/app/src/main/res/layout/content_detail_restaurant.xml
+++ b/app/src/main/res/layout/content_detail_restaurant.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.RestaurantDetailsActivity"
+    tools:context=".ui.DetailActivity"
     tools:showIn="@layout/activity_detail_restaurant">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -68,6 +68,7 @@
                 android:orientation="vertical"
                 android:layout_marginStart="50dp"
                 android:layout_centerVertical="true">
+
                 <ImageButton
                     android:id="@+id/restaurant_details_call_btn"
                     android:layout_width="match_parent"
@@ -75,6 +76,7 @@
                     android:background="#fff"
                     android:src="@drawable/ic_baseline_call_24"
                     android:layout_gravity="center"/>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
